<resources>
    <string name="app_name">commonactivity</string>

    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="username">用户名</string>
    <string name="action_sign_in">登录</string>
    <string name="action_regist_in">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_regist_in_short">注册</string>
    <string name="error_invalid_email">邮件格式有误</string>
    <string name="error_invalid_phone">手机号格式有误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码有误</string>
    <string name="error_field_required">此空需要填写</string>
    <string name="device_name">PC名</string>
    <string name="pcip">设备IP</string>
    <string name="pcmac">设备MAC</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="userphone">手机号</string>
    <string name="register">注册</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
